Fix project alignment in css

--- a/index.css
+++ b/index.css
@@ -70,6 +70,7 @@ p {
 
 .project-section {
   margin: 20px;
+  width: 50%;
   /* padding: 8px; */
 }
 
